[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
chess-core = { path = "../core" }
chess-methods = { path = "../methods" }
cozy-chess = { version = "0.3.3", default-features = false }
hex = "0.4"
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }
rand_core = "0.6.4"
risc0-zkvm = { version = "0.20.1" }
serde = "1.0"
sha2 = "0.10.6"
