[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
chess-core = { path = "../../core" }
risc0-zkvm = { version = "0.19.0-rc.3", default-features = false, features = ["std"] }
cozy-chess = { version = "0.3.3", default-features = false }
hex = { version = "0.4", default-features = false }
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }
sha2 = "0.10.6"

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risczero.1"  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }

[profile.release]
# Empirically observed to result in the best performance for this binary (in particular, better than
# "fat"). It's often a good idea to experiment with different optimization levels and options.
lto = "thin"
